# MC859---Projeto

./: dependencies.csv  pyproject.toml  requirements.txt  run_full_pipeline.py  usage_stats.csv
data/: centrality_katz.csv  centrality_scores.betweenness_baseline.csv  centrality_scores.csv  dependencies.csv  dependency_graph.graphml  osv_advisories.csv  risk_scores.csv  seeds.csv  simulation_results.csv  usage_stats.csv  validation_report.csv
relatório/: Relatório Final.tex
scripts/: compare_centrality_variants.py
src/supplychain/: config.py
src/supplychain/cli/: _common.py  build_graph.py  cascade.py  centrality.py  collect_metrics.py  risk.py  run_pipeline.py  validate.py
src/supplychain/common/: graph_io.py  logging.py  normalization.py  scores_io.py
src/supplychain/extraction/: extractor.py
src/supplychain/graph/: analyzer.py  builder.py  plotter.py
src/supplychain/pipeline/: cascade.py  centrality.py  risk.py
src/supplychain/validation/: cvss.py  ground_truth.py  osv_client.py  validator.py
