[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "supplychain"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-bigquery>=3.20.0",
    "db-dtypes>=1.2.0",
    "pandas>=2.1.0",
    "networkx>=3.2",
    "requests>=2.31.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pyarrow>=14.0",
    "bitarray>=2.9.0",
    "scipy>=1.12.0",
    "tqdm>=4.66.0",
]

[project.scripts]
build-graph = "supplychain.cli.build_graph:main"
collect-metrics = "supplychain.cli.collect_metrics:main"
risk-score = "supplychain.cli.risk:main"
centrality = "supplychain.cli.centrality:main"
cascade = "supplychain.cli.cascade:main"
validate = "supplychain.cli.validate:main"
run-pipeline = "supplychain.cli.run_pipeline:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "supplychain",
    "supplychain.common",
    "supplychain.extraction",
    "supplychain.graph",
    "supplychain.pipeline",
    "supplychain.validation",
    "supplychain.cli",
]
